# ijkplayer

./: .gitignore  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-arm64/src/main/: AndroidManifest.xml
ijkplayer-armv7a/src/main/jni/: Android.mk
ijkplayer-example/: build.gradle  signKey
ijkplayer-example/src/main/: AndroidManifest.xml
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java  IjkPlayActivity.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/fragments/: SampleMediaListFragment.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/util/: FileUtil.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/media/: IjkVideoView.java
ijkplayer-example/src/main/res/layout/: activity_ijk_play.xml
ijkplayer-exo/: build.gradle
ijkplayer-exo/src/main/java/tv/danmaku/ijk/media/exo/: IjkExoMediaPlayer.java
ijkplayer-java/: build.gradle
ijkplayer-java/src/main/java/tv/danmaku/ijk/media/player/: AndroidMediaPlayer.java  IMediaPlayer.java  IjkMediaPlayer.java  MediaPlayerProxy.java  TextureMediaPlayer.java
ijkplayer-x86/src/main/: AndroidManifest.xml
ijkplayer-x86_64/: build.gradle
native_lib/: CMakeLists.txt  build.gradle
native_lib/src/androidTest/java/com/example/native_lib/: ExampleInstrumentedTest.java
native_lib/src/main/: AndroidManifest.xml
native_lib/src/main/cpp/ijkmedia/ijkplayer/: dj_record.c  dj_record.cpp  dj_record.h  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ijkplayer.c  ijkplayer.h
native_lib/src/main/cpp/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
native_lib/src/main/cpp/ijkmedia/ijksdl/: ijksdl_thread.c
native_lib/src/main/cpp/ijkmedia/ijksdl/android/: android_nativewindow.c  ijksdl_android_jni.c  ijksdl_android_jni.h
native_lib/src/main/cpp/ijkmedia/ijksoundtouch/: HQueue.cpp
native_lib/src/main/cpp/ijkmedia/ijkyuv/source/: row_win.cc
native_lib/src/main/cpp/ijkmedia/ijkyuv/util/: psnr.cc  psnr.h
native_lib/src/main/res/values/: strings.xml
native_lib/src/test/java/com/example/native_lib/: ExampleUnitTest.java
